working on the story progression page

--- a/html/playing/story-progression.html
+++ b/html/playing/story-progression.html
@@ -72,23 +72,86 @@
           <p>Text</p>
           <h2 id="main_story">Main Story</h2>
           <h3 id="small_valley"><a href="/shiren2/html/dungeon/small-valley.html">Small Valley</a></h3>
-          <p>Text</p>
+          <p>Shiren rescues Kirara from a trap after clearing Small Valley.</p>
           <h3 id="shuten_trail_easy"><a href="/shiren2/html/dungeon/shuten-trail-easy.html">Shuten Trail Easy</a></h3>
-          <p>Text</p>
+          <p>Event occurs at the udon restaurant in Napus Village, leading to Shiren having to build a castle.<br>The game automatically proceeds to Shuten Trail Easy after the events.</p>
           <h3 id="shuten_trail_mid"><a href="/shiren2/html/dungeon/shuten-trail-mid.html">Shuten Trail Mid</a></h3>
-          <p>Text</p>
+          <p>Unlocked during an event that plays after clearing Shuten Trail Easy.<br>Shiren and Koppa obtain the Torn Manuscript if they defeat the 3 Water Striders on 13F.</p>
           <h3 id="shuten_trail_hard"><a href="/shiren2/html/dungeon/shuten-trail-hard.html">Shuten Trail Hard</a></h3>
-          <p>Text</p>
+          <p>Talk to Saigo at the beach after clearing Shuten Trail Mid to turn the Torn Manuscript into the Ancient Manuscript.<br>Place the Ancient Manuscript in the small shrine in Napus Village (upper-right) to unlock Shuten Trail Hard.</p>
           <h3 id="until_castle_completion">Until Castle Completion</h3>
-          <p>Text</p>
+          <p>It's possible to progress the castle events without ever going to Shuten Trail Mid or Shuten Trail Hard.</p>
           <h4 id="castle_part_events">Castle Part Events</h4>
-          <p>Table</p>
+          <table class="table_less_padding table_text_left">
+            <thead>
+              <tr>
+                <th>Parts</th>
+                <th>Event</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>3</td>
+                <td>Meet Riku for the first time.</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>Riku is bullied by Oni. Meet Sasumi for the first time.<br>Hang out at Riku's house.</td>
+              </tr>
+              <tr>
+                <td>8</td>
+                <td>Kirara makes a second appearance.<br>Spend the night at Riku's house. Event with Sasumi.<br>The villagers tell Riku to stop helping.</td>
+              </tr>
+              <tr>
+                <td>10</td>
+                <td>Kirara visits the castle site. Riku becomes an ally.<br>Oni start to attack the unfinished castle.</td>
+              </tr>
+              <tr>
+                <td>14</td>
+                <td>Shiren promises to go to the festival with Kirara.</td>
+              </tr>
+              <tr>
+                <td>16</td>
+                <td>Festival night. Kirara becomes an ally.</td>
+              </tr>
+              <tr>
+                <td>20</td>
+                <td>Castle is finally complete.<br>Oni attack, but everyone manages to chase them away.<br>Event at the shrine, followed by an event at the castle.<br>It's decided that the village will launch an attack on Onigashima.</td>
+              </tr>
+            </tbody>
+          </table>
           <h4 id="allies_joining_requirements">Allies Joining Requirements</h4>
-          <p>Text</p>
+          <dl>
+            <dt>Himakichi</dt>
+            <dd>Joins after 6 castle parts + 4 or more adventures.<br>Randomly appears in the river in Napus Village after the inital encounter.</dd>
+            <dt>Asuka</dt>
+            <dd>Joins after 8 castle parts + 6 or more adventures.<br>Randomly appears at Shuten Halfway after the inital encounter..</dd>
+            <dt>Riku</dt>
+            <dd>Joins after 10 castle parts.<br>Randomly asks to join when leaving Napus Village after the inital encounter.</dd>
+            <dt>Kirara</dt>
+            <dd>Joins after 16 castle parts.<br>Randomly appears on 1~2F inside a dungeon after the inital encounter.</dd>
+            <dt>Mamo</dt>
+            <dd>Joins after 14 castle parts + 7 or more adventures.<br>Randomly appears outside the udon restaurant after the inital encounter.</dd>
+          </dl>
+          <p>The number of adventures requirement seems to fluctuate based on the number of completed castle parts.<br>It's assumed that the requirements are [X number of castle parts + Y number of adventures].<br>Usually all allies will have joined before the story progresses to attacking Onigashima.</p>
+          <p>All allies will be permanently available in Napus Village after clearing Onigashima.</p>
           <h3 id="onigashima"><a href="/shiren2/html/dungeon/onigashima.html">Onigashima</a></h3>
-          <p>Text</p>
+          <p>Shiren, his allies, and the villagers launch an attack on Onigashima to teach the Oni a lesson.<br>Allies can appear inside Onigashima, and will ask to join you if you talk to them.</p>
+          <dl>
+            <dt>1-2F</dt>
+            <dd>Kirara joins.</dd>
+            <dt>12-13F</dt>
+            <dd>Event occurs.</dd>
+            <dt>16F</dt>
+            <dd>Galaha fight.</dd>
+            <dt>25F</dt>
+            <dd>Boss Oni fight.</dd>
+          </dl>
+          <p>The ending will play and the credits will roll after defeating Boss Oni.<br>However, new post-game stories and dungeons open up when you resume your adventure.<br>So the main story might be over after Onigashima, but the game is just getting started.</p>
           <h2 id="post_game">Post-Game</h2>
-          <p>Text</p>
+          <p><a href="/shiren2/html/dungeon/shrines-hidden-hole.html">Shrine's Hidden Hole</a> and <a href="/shiren2/html/dungeon/sealed-room.html">Sealed Room</a> dungeons are now available.</p>
+          <p><a href="/shiren2/html/dungeon/halfway-well.html">Halfway Well</a> is unlocked once 30 monsters have been registered to <a href="/shiren2/html/system/monster-kingdom.html">Monster Kingdom</a>.</p>
+          <p><a href="/shiren2/html/dungeon/road-to-the-end.html">Road to the End</a> is unlocked after clearing Halfway Well.</p>
         </div>
       </main>
     </div>
