add some images

--- a/html/system/monster-house.html
+++ b/html/system/monster-house.html
@@ -59,6 +59,7 @@
             </li>
           </ul>
           <h2 id="monster_house_characteristics">Monster House Characteristics</h2>
+          <img src="/shiren2/image/other/monster_house.png" width="350" height="260" alt="monster_house.png">
           <p>Monster House is a location in a dungeon where a room is packed with many monsters and items.<br>They are generated at random, and can be generated in dungeons starting with Onigashima.<br>The ground is also covered in hidden traps, so care is needed when moving around the room.
           </p>It's best to eat Sight Grass if you have it on hand, but otherwise check for traps one tile at a time.<br>If you successfully clear out a Monster House, you can claim the items as a reward.<br>Whether Monster Houses are positive or negative generally comes down to a player's skill.</p>
           <p>The message "It's a (Monster Type) House!" is displayed when you first step foot into a Monster House,<br>and the music changes to one of two Monster House themes, depending on the type.</p>
