--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -193,6 +193,7 @@
             <dt>Shuffle Dungeon</dt>
             <dd></dd>
           </dl>
+          <img src="/shiren2/image/other/shuffle_dungeon_1.png" width="300" height="223" alt="shuffle_dungeon_1.png"><img src="/shiren2/image/other/shuffle_dungeon_2.png" width="300" height="223" alt="shuffle_dungeon_2.png">
           <ul>
             <li>The map for the floor is randomly selected from a set of predefined patterns.
               <ul>
@@ -233,6 +234,7 @@
             <dt>Random Dungeon</dt>
             <dd></dd>
           </dl>
+          <img src="/shiren2/image/other/random_dungeon_3.png" width="300" height="222" alt="random_dungeon_3.png"><img src="/shiren2/image/other/random_dungeon_2.png" width="300" height="223" alt="random_dungeon_2.png">
           <ul>
             <li>There are no predefined patterns, and each floor is generated completely randomly.</li>
             <li>Every tile is a ground, water, ice, wall, or unbreakable wall tile. There are no hole / bottomless pit tiles.</li>
