delete one of the images

--- a/html/system/castle.html
+++ b/html/system/castle.html
@@ -23,7 +23,7 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Castle</h2>
-          <img src="/shiren2/image/other/castle.png" width="351" height="260" alt="castle.png">
+          <img src="/shiren2/image/other/castle.png" width="351" height="260" alt="castle.png" class="gallery_image">
           <p>As the story progresses, Shiren soon finds himself having to build a castle for the village.<br>Castle <a href="/shiren2/html/item/castle-materials.html">Materials</a> can be found throughout Shuten Mountain, and each category comes in three grades.</p>
           <p>The basic flow is:<br><span style="color:purple;">Obtain materials in dungeons → Make castle parts at the summit → Return to the village and build.</span></p>
           <p>Note that your save file will receive a castle icon when you complete the castle.</p>
