finished the story progression page

--- a/html/playing/story-progression.html
+++ b/html/playing/story-progression.html
@@ -54,22 +54,29 @@
             <li><a href="#post_game">Post-Game</a></li>
           </ul>
           <h2 id="story">Story</h2>
-          <p>Text</p>
+          <p>Shiren 2 is the story of Shiren when he was still only a child.<br>It's the first game in the timeline, and introduces some of the recurring characters in the series.</p>
+          <p>The story begins with wanderer Shiren and talking ferret Koppa traveling together.<br>They come across Napus Village, where the villagers are seemingly troubled by a clan of Oni.<br>Due to a strange coincidence, Shiren ends up having to build a castle to protect the village.<br>He heads off to Shuten Mountain which is full of monsters in search of castle materials.</p>
+          <p>Shiren finally completes the castle with help from the villagers.<br>With the castle standing tall, he heads to Onigashima with his allies to teach the Oni a lesson.<br>Onigashima is full of monsters, but he makes it to the top, and duels Boss Oni.<br>Shiren won the fight after a fierce battle, and peace finally arrived to Napus Village.</p>
+          <p>Upon returning to Napus Village, he is told of a prophecy.<br>"He will lead a smelly ferret and head toward numerous new dungeons..."<br>New dungeons appear, and Shiren's adventure is just getting started.</p>
           <h2 id="characters">Characters</h2>
           <h3 id="shiren">Shiren</h3>
-          <p>Text</p>
+          <p>The protagonist of Shiren 2.<br>He wears an iconic straw hat and a cape with vertical stripes,<br>and travels the countryside with his partner Koppa.<br>Shiren is 10 years old in this entry, and Shiren 2 is the first game in the timeline.</p>
           <h3 id="koppa">Koppa</h3>
-          <p>Text</p>
+          <p>A talking ferret who travels the countryside together with his partner Shiren.<br>He tends to speak in place of Shiren, and can be quite sarcastic at times.<br>Inside dungeons, he hangs out either in Shiren's hat or inside his bag.</p>
+          <p>Shiren is 18 years old in Shiren 1,<br>and it's mentioned that he and Koppa teamed up half a year ago in that game.<br>This seems inconsistent, since they've been together since at least when Shiren was 10 years old.<br>However, an <a href="https://twitter.com/chun_shiren/status/20786496139169792">official tweet</a> exists that says there's an explanation that makes sense.</p>
           <h3 id="himakichi">Himakichi</h3>
-          <p>Text</p>
+          <p>A <a href="/shiren2/html/system/monsters.html#bored_kappa_family">Bored Kappa</a> family monster who has more time than he knows what to do with.<br>He becomes interested in Shiren's fight against the Oni, and joins him to waste some time.<br>He has the ability to toss items at enemies, including arrows and Cannonballs.</p>
+          <p>Note that Himakichi isn't the same character as the Bored Kappa family ally seen in Asuka Kenzan.</p>
           <h3 id="riku">Riku</h3>
-          <p>Text</p>
+          <p>Younger brother of the village beauty, Sasumi.<br>He was a delicate child, but grew stronger as a result of meeting Shiren.<br>He can shoot a slingshot in a 2 tile radius during battle.<br>However, he has the <strong>weakest stats</strong> as an ally, and tends to be more of a liability than a help.</p>
           <h3 id="asuka">Asuka</h3>
-          <p>Text</p>
+          <p>A 14 year old swordswoman who is undergoing training as a wanderer.<br>She tends to sound a little old-fashioned in the way she speaks.<br>She was helped by Shiren when she was disarmed and surrounded by Kengo at Shuten Halfway,<br>and decides to help him build the castle as thanks.</p>
+          <p>She's a popular character of the series, and became the protagonist of a sequel called Asuka Kenzan.<br>She also makes an appearance in Shiren 3 as an ally.</p>
           <h3 id="kirara">Kirara</h3>
-          <p>Text</p>
+          <p>Daughter of Boss Oni, who was rescued by Shiren when she was caught in a trap.<br>She had a difficult time being straight with her words,<br>but finally opens her heart after attending the village festival.<br>She develops a crush on Shiren, and later joins him as an ally.<br>She has the ability to beathe fire, and is immune to fire damage.</p>
           <h3 id="mamo">Mamo</h3>
-          <p>Text</p>
+          <p>Incarnation of Shuten Mountain's guardian deity, Mamori・Gami.<br>Mamo is moved by Shiren's efforts to help the village, and decides to help him in the physical realm.<br>They assume the appearance of a dresser that was inside the udon restaurant.<br>Mamo cannot fight enemies, but has the ability to "Shuno" items. (Deposit / withdraw items).</p>
+          <p>Mamo makes another appearance in a sequel called Shiren GB2. (And GB2's remake, Shiren DS2).</p>
           <h2 id="main_story">Main Story</h2>
           <h3 id="small_valley"><a href="/shiren2/html/dungeon/small-valley.html">Small Valley</a></h3>
           <p>Shiren rescues Kirara from a trap after clearing Small Valley.</p>
