add padding to wind images

--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -179,7 +179,9 @@
           <p>Enemies standing on a tile that is on fire who received fire damage due to an action by Shiren<br>will not take additional fire damage on the same turn unless they move to a different tile that is on fire.</p>
           <p>Characters other than Shiren with double or triple movement speed who receive fire damage<br>by moving to a tile that is on fire will end their turn when they receive the fire damage.</p>
           <h3 id="wind">Wind</h3>
-          <img src="/shiren2/image/other/wind_1.png" width="269" height="200"><img src="/shiren2/image/other/wind_2.png" width="269" height="200"><img src="/shiren2/image/other/wind_3.png" width="267" height="200">
+          <div class="image_padding">
+            <img src="/shiren2/image/other/wind_1.png" width="269" height="200"><img src="/shiren2/image/other/wind_2.png" width="269" height="200"><img src="/shiren2/image/other/wind_3.png" width="267" height="200">
+          </div>
           <p>If you linger on the same floor inside of a dungeon for a long time, a strong wind begins to blow.<br>(Also occurs inside the Training Hall and Napus Storage)</p>
           <p>The gusts happen 3 times, and Shiren is swept back to Napus Village on the third gust of wind.<br>Being swept away by wind is equivalent to collapsing, so you'll lose all items and Gitan.<br>Asuka and Mamo's items will not be lost, and items on the floor inside Napus Storage will be safe.</p>
           <ul>
