working on the basic techniques page

--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -23,7 +23,8 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Basic Techniques</h2>
-          <p>Text</p>
+          <p>This page introduces some of the common gameplay techniques to help you on your adventures.<br>See the <a href="/shiren2/html/system/gameplay-basics.html">Gameplay Basics</a> page for explanations regarding gameplay systems and mechanics.</p>
+          <p>Have you ever been in a situation where you wondered, "What should I do here?"<br>Perhaps you ended up in such a situation due to your own inexperience or carelessness,<br>but even situations that appear to be hopeless at first glance often have solutions.<br>Your adventures will be more enjoyable if you overcome such challenges, rather than simply giving up.</p>
           <ul id="quick_links" class="quick_links">
             <li><a href="#basics">Basics</a>
               <ul>
@@ -99,15 +100,32 @@
           </ul>
           <h2 id="basics">Basics</h2>
           <h3 id="diagonal_movement">Diagonal Movement</h3>
-          <p>Text</p>
+          <p>Diagonal movement is one of the simplest but most important techniques in the game.<br>It might take some practice, but it will help you navigate around monsters, and save on turns in general.</p>
           <h3 id="lure_enemies">Lure Enemies</h3>
-          <p>Text</p>
+          <p>If you encounter an enemy in a room or hallway with a 1 tile gap:<br>
+          ＿＿＿＿＿＿＿＿＿<br>
+          [Shiren] [　] [Enemy]<br>
+          ￣￣￣￣￣￣￣￣￣<br>
+          Instead of moving toward the enemy, swing your weapon so that the enemy moves toward you:
+          ＿＿＿＿＿＿＿＿＿<br>
+          [Shiren] [Enemy]←<br>
+          ￣￣￣￣￣￣￣￣￣<br>
+          That way you'll avoid giving the first hit to the enemy.
+          </p>
           <h3 id="fight_in_hallways">Fight in Hallways</h3>
-          <p>Text</p>
+          <p>If there are multiple monsters in the room, move into a hallway and fight them one at a time.<br>Getting surrounded means you'll end up taking damage from multiple attacks each turn.<br>Shiren can normally only attack one monster at a time, so nothing good will come from<br>trying to take on multiple enemies at the same time.</p>
           <h3 id="step_in_place_to_recover_hp">Step in Place to Recover HP</h3>
-          <p>Text</p>
+          <p>You can step in place and fast-forward turns by holding A+B.<br>This will let you quickly recover HP without moving, and should be done<br>before proceeding to other rooms if your HP is low.<br>However, you'll want to keep an eye on your fullness if you use this technique very often.</p>
           <h3 id="use_items_in_a_pinch">Use Items in a Pinch</h3>
-          <p>Text</p>
+          <p>If you collapse in a dungeon, you'll lose all of your items.<br>So if you find yourself in a pinch, don't hesitate to use items.</p>
+          <ul>
+            <li>Herb or Otogiriso to restore HP.</li>
+            <li>Swift Grass if you want a movement advantage.</li>
+            <li>Warp Grass if you need a quick escape.</li>
+            <li>Decoy Scroll if you want to avoid taking damage.</li>
+            <li>Arrows or Cannonballs if you want to defeat enemies from a distance.</li>
+          </ul>
+          And so on - make use of your items depending on your current needs.
           <h2 id="riceballs">Riceballs</h2>
           <h3 id="keep_them_in_storage_pots">Keep them in Storage Pots</h3>
           <p>Text</p>
