add some images to basic techniques page

--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -100,23 +100,28 @@
           </ul>
           <h2 id="basics">Basics</h2>
           <h3 id="diagonal_movement">Diagonal Movement</h3>
+          <img src="/shiren2/image/other/diagonal_movement.png" width="140" height="100" alt="diagonal_movement.png" class="image_padding">
           <p>Diagonal movement is one of the simplest but most important techniques in the game.<br>It might take some practice, but it will help you navigate around monsters, and save on turns in general.</p>
           <h3 id="lure_enemies">Lure Enemies</h3>
+          <img src="/shiren2/image/other/lure_monster.png" width="565" height="106" alt="lure_monster.png" class="image_padding">
           <p>If you encounter an enemy in a room or hallway with a 1 tile gap:<br>
           ＿＿＿＿＿＿＿＿＿<br>
           [Shiren] [　] [Enemy]<br>
           ￣￣￣￣￣￣￣￣￣<br>
-          Instead of moving toward the enemy, swing your weapon so that the enemy moves toward you:
+          Instead of moving toward the enemy, swing your weapon so that the enemy moves toward you:<br>
           ＿＿＿＿＿＿＿＿＿<br>
           [Shiren] [Enemy]←<br>
           ￣￣￣￣￣￣￣￣￣<br>
           That way you'll avoid giving the first hit to the enemy.
           </p>
           <h3 id="fight_in_hallways">Fight in Hallways</h3>
+          <img src="/shiren2/image/other/use_hallways.png" width="485" height="180" alt="use_hallways.png" class="image_padding">
           <p>If there are multiple monsters in the room, move into a hallway and fight them one at a time.<br>Getting surrounded means you'll end up taking damage from multiple attacks each turn.<br>Shiren can normally only attack one monster at a time, so nothing good will come from<br>trying to take on multiple enemies at the same time.</p>
           <h3 id="step_in_place_to_recover_hp">Step in Place to Recover HP</h3>
+          <img src="/shiren2/image/other/step_in_place.png" width="210" height="150" alt="step_in_place.png" class="image_padding">
           <p>You can step in place and fast-forward turns by holding A+B.<br>This will let you quickly recover HP without moving, and should be done<br>before proceeding to other rooms if your HP is low.<br>However, you'll want to keep an eye on your fullness if you use this technique very often.</p>
           <h3 id="use_items_in_a_pinch">Use Items in a Pinch</h3>
+          <img src="/shiren2/image/other/use_items.png" width="687" height="170" alt="use_items.png" class="image_padding">
           <p>If you collapse in a dungeon, you'll lose all of your items.<br>So if you find yourself in a pinch, don't hesitate to use items.</p>
           <ul>
             <li>Herb or Otogiriso to restore HP.</li>
@@ -134,10 +139,12 @@
           <h3 id="eating_order">Eating Order</h3>
           <p>Text</p>
           <h2 id="level_up_by_defeating_strong_enemies">Level Up by Defeating Strong Enemies</h2>
+          <img src="/shiren2/image/other/level_up_monster.png" width="900" height="167" alt="level_up_monster.png" class="image_padding">
           <p>Text</p>
           <p>Table</p>
           <p>Table</p>
           <h2 id="synthesize_otogiriso">Synthesize Otogiriso for an Easier Time</h2>
+          <img src="/shiren2/image/other/synthesize_otogiriso.png" width="863" height="160" alt="synthesize_otogiriso.png" class="image_padding">
           <p>Text</p>
           <h2 id="how_to_handle_curses">How to Handle Curses</h2>
           <p>Text</p>
@@ -174,6 +181,7 @@
           <p>Text</p>
           <h3 id="shuten_trail_mid"><a href="/shiren2/html/dungeon/shuten-trail-mid.html">Shuten Trail Mid</a></h3>
           <h4 id="how_to_fight_boy_cart">How to fight Boy Cart</h4>
+          <img src="/shiren2/image/other/boy_cart.png" width="399" height="160" alt="boy_cart.png" class="image_padding">
           <p>Text</p>
           <h4 id="luring_gale">Luring Gale</h4>
           <p>Text</p>
