working on the basic techniques page

--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -133,13 +133,39 @@
           And so on - make use of your items depending on your current needs.
           <h2 id="riceballs">Riceballs</h2>
           <h3 id="keep_them_in_storage_pots">Keep them in Storage Pots</h3>
-          <p>Text</p>
+          <p>Riceballs will not spoil over time, but can spoil from outside factors such as stepping on a Spoil Trap.<br>However, they can be protected from spoiling by simply placing them inside pots.</p>
+          <p>It might not seem like a big deal during the Shuten Trails since you can buy new riceballs at Shuten Halfway,<br>but lowering the number of turns/actions you can perform before starvation is a pretty significant hit.<br>It's best to get in the habit of placing riceballs inside Storage Pots now,<br>so that you'll have an easier time once you reach the later dungeons.</p>
           <h3 id="when_to_eat">When to Eat</h3>
-          <p>Text</p>
+          <p>Ideally, you'll want to eat riceballs when none of the restored fullness goes to waste.<br>For example, if you eat a Large Riceball (restores 100%) at 20/100% fullness, 20% fullness is wasted.<br>So instead, it's best to eat the Large Riceball the moment your fullness reaches 0%.</p>
+          <p>Food is extremely valuable, since it increases the number of turns / actions you can perform before starving.<br>Remember, wait until none of the fullness goes to waste before eating, especially during early game.<br>Eating grass items also restores 5% fullness, so it's best to eat them when you're not at max fullness.</p>
           <h3 id="eating_order">Eating Order</h3>
+          <p>There are 5 types of riceballs in Shiren 2, and some should be prioritized over others.</p>
+          <dl>
+            <dt>When you don't have a Storage Pot, or have few riceballs:</dt>
+            <dd></dd>
+          </dl>
+          <ul>
+            <li>Giant Riceball</li>
+            <li>Large Riceball</li>
+            <li>Riceball</li>
+            <li>Specialty Riceball</li>
+            <li>Spoiled Riceball</li>
+          </ul>
+          <p>Text</p>
+          <dl>
+            <dt>When you have a Storage Pot:</dt>
+            <dd></dd>
+          </dl>
+          <ul>
+            <li>Giant Riceball</li>
+            <li>Specialty Riceball</li>
+            <li>Riceball</li>
+            <li>Large Riceball</li>
+            <li>Spoiled Riceball</li>
+          </ul>
           <p>Text</p>
           <h2 id="level_up_by_defeating_strong_enemies">Level Up by Defeating Strong Enemies</h2>
-          <img src="/shiren2/image/other/level_up_monster.png" width="900" height="167" alt="level_up_monster.png" class="image_padding">
+          <img src="/shiren2/image/other/level_up_monster.png" width="863" height="160" alt="level_up_monster.png" class="image_padding">
           <p>Text</p>
           <p>Table</p>
           <p>Table</p>
