working on the basic techniques page

--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -134,7 +134,7 @@
           <h2 id="riceballs">Riceballs</h2>
           <h3 id="keep_them_in_storage_pots">Keep them in Storage Pots</h3>
           <p>Riceballs will not spoil over time, but can spoil from outside factors such as stepping on a Spoil Trap.<br>However, they can be protected from spoiling by simply placing them inside pots.</p>
-          <p>It might not seem like a big deal during the Shuten Trails since you can buy new riceballs at Shuten Halfway,<br>but lowering the number of turns/actions you can perform before starvation is a pretty significant hit.<br>It's best to get in the habit of placing riceballs inside Storage Pots now,<br>so that you'll have an easier time once you reach the later dungeons.</p>
+          <p>It might not seem like a big deal during the Shuten Trails since you can buy new riceballs at Shuten Halfway,<br>but lowering the number of turns/actions you can perform before starving is a pretty significant hit.<br>It's best to get in the habit of placing riceballs inside Storage Pots now,<br>so that you'll have an easier time once you reach the later dungeons.</p>
           <h3 id="when_to_eat">When to Eat</h3>
           <p>Ideally, you'll want to eat riceballs when none of the restored fullness goes to waste.<br>For example, if you eat a Large Riceball (restores 100%) at 20/100% fullness, 20% fullness is wasted.<br>So instead, it's best to eat the Large Riceball the moment your fullness reaches 0%.</p>
           <p>Food is extremely valuable, since it increases the number of turns / actions you can perform before starving.<br>Remember, wait until none of the fullness goes to waste before eating, especially during early game.<br>Eating grass items also restores 5% fullness, so it's best to eat them when you're not at max fullness.</p>
@@ -151,7 +151,7 @@
             <li>Specialty Riceball</li>
             <li>Spoiled Riceball</li>
           </ul>
-          <p>Text</p>
+          <p>The scariest thing about not having riceballs inside Storage Pots is stepping on a Spoil or Flood trap.<br>No matter how good the riceball is, it'll be reduced to a Spoiled Riceball if you step on those traps.<br>Therefore, you should prioritize eating the best riceballs first to lower the risk of them going to waste.</p>
           <dl>
             <dt>When you have a Storage Pot:</dt>
             <dd></dd>
@@ -163,12 +163,127 @@
             <li>Large Riceball</li>
             <li>Spoiled Riceball</li>
           </ul>
-          <p>Text</p>
+          <p>Giant Riceball should still be prioritized because it increases max fullness by 7%.<br>It's common to end up with multiple riceballs over time when you have a Storage Pot,<br>so the idea is to prioritize eating riceballs with low fullness restoration to free up inventory space.</p>
           <h2 id="level_up_by_defeating_strong_enemies">Level Up by Defeating Strong Enemies</h2>
           <img src="/shiren2/image/other/level_up_monster.png" width="863" height="160" alt="level_up_monster.png" class="image_padding">
-          <p>Text</p>
-          <p>Table</p>
-          <p>Table</p>
+          <p>Eating Happy Grass increases level by 1, but it can also be thrown at a monster to level them up.<br>You can utilize this to create a strong enemy, and then defeat them for a large amount of experience points,<br>with the end result of gaining multiple level ups as opposed to just one from eating the Happy Grass.</p>
+          <p>Happy Staff can also be used to level up an enemy monster.<br>Snacky can spawn on early floors in dungeons like <a href="/shiren2/html/dungeon/road-to-the-end.html">Road to the End</a>,<br>possibly resulting in a monster defeating it and leveling up.<br>Leveling up a Pit Mamel into a Cave Mamel early on is highly recommended.</p>
+          <p>Of course, higher level enemies are much stronger, so you have to be careful with how you defeat them.<br>There are many ways to defeat high level enemies, but here are some ideas:</p>
+          <ul>
+            <li>Deal lots of damage in a single hit by throwing Gitan or using Flame Grass, Dragon Grass, etc.</li>
+            <li>Slow the enemy or eat Swift Grass, and then loop attack → step back → attack → step back.</li>
+            <li>Step on a Poison Trap so that the Poison Arrow hits the monster, lowering their strength to 0.</li>
+          </ul>
+          <table class="table_less_padding table_text_left">
+            <thead>
+              <tr>
+                <th colspan="2">Easy Level Up Monsters</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Wolf Droid Family</td>
+                <td>Have it defeat other monsters by moving Shiren near them so they get hit by explosions.</td>
+              </tr>
+              <tr>
+                <td>Bow Boy Family</td>
+                <td>Have it defeat a monster standing between itself and Shiren using arrows or Cannonballs.</td>
+              </tr>
+              <tr>
+                <td>Horse Ronin Family</td>
+                <td>Have it defeat a monster standing between itself and Shiren using Silver Arrows.</td>
+              </tr>
+              <tr>
+                <td>Ironhead Family</td>
+                <td>Have it defeat a monster standing between itself and Shiren.</td>
+              </tr>
+              <tr>
+                <td>Stone Beast Family</td>
+                <td>Have it defeat a weakened monster by knocking Shiren into them with its tackle.</td>
+              </tr>
+              <tr>
+                <td>Armordillo Family</td>
+                <td>Same as Stone Beast Family.</td>
+              </tr>
+              <tr>
+                <td>Tiger Tosser Family</td>
+                <td>Have it throw a weakened monster at Shiren.</td>
+              </tr>
+            </tbody>
+          </table>
+          <table class="table_less_padding table_text_left">
+            <thead>
+              <tr>
+                <th colspan="6">High Exp Monsters (Bold = Recommended)</th>
+              </tr>
+              <tr>
+                <th>Name</th>
+                <th>Exp</th>
+                <th>Name</th>
+                <th>Exp</th>
+                <th>Name</th>
+                <th>Exp</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Megataur</td>
+                <td>5000</td>
+                <td>Boulder Beast</td>
+                <td>3100</td>
+                <td>Shihan</td>
+                <td>2250</td>
+              </tr>
+              <tr>
+                <td><strong>Stun Scorpion</strong></td>
+                <td>4900</td>
+                <td>Gottsuan</td>
+                <td>3000</td>
+                <td>Gazelle Pope</td>
+                <td>2200</td>
+              </tr>
+              <tr>
+                <td>Typhoon</td>
+                <td>4000</td>
+                <td>Water Shinryu</td>
+                <td>2500</td>
+                <td>Porkton</td>
+                <td>2150</td>
+              </tr>
+              <tr>
+                <td>Emperor Tusker</td>
+                <td>3500</td>
+                <td>Bear Borg</td>
+                <td>2500</td>
+                <td>Vexing Kappa</td>
+                <td>2050</td>
+              </tr>
+              <tr>
+                <td>Garm Dragon</td>
+                <td>3500</td>
+                <td>Mixergon</td>
+                <td>2500</td>
+                <td>Hyper Gazer</td>
+                <td>2000</td>
+              </tr>
+              <tr>
+                <td><strong>Gigahead</strong></td>
+                <td>3150</td>
+                <td><strong>Tiger Chucker</strong></td>
+                <td>2400</td>
+                <td>Orcaon</td>
+                <td>2000</td>
+              </tr>
+              <tr>
+                <td><strong>Horse Emperor</strong></td>
+                <td>3100</td>
+                <td><strong>Cranky Tank</strong></td>
+                <td>2300</td>
+                <td></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
           <h2 id="synthesize_otogiriso">Synthesize Otogiriso for an Easier Time</h2>
           <img src="/shiren2/image/other/synthesize_otogiriso.png" width="863" height="160" alt="synthesize_otogiriso.png" class="image_padding">
           <p>Text</p>
