--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -286,7 +286,10 @@
           </table>
           <h2 id="synthesize_otogiriso">Synthesize Otogiriso for an Easier Time</h2>
           <img src="/shiren2/image/other/synthesize_otogiriso.png" width="863" height="160" alt="synthesize_otogiriso.png" class="image_padding">
-          <p>Text</p>
+          <p>Synthesizing Otogiriso onto a shield or weapon lets Shiren restore HP when he receives or deals damage.<br>One 弟 seal restores 4 HP, and the amount of HP restored can be increased by <a href="/shiren2/html/system/synthesis-seals.html#stacked_effects">stacking seals</a>.</p>
+          <p>For example, if you have 5 弟 seals on a shield, 15 HP will be restored every time you get hit by an attack.<br>So, stacking 5 弟 seals pretty much nullifies any attack that deals 15 or less damage!<br>The HP restoration also takes effect when you're hit by ranged attacks like Dragon fire.<br>Furthermore, whereas the HP restoration only takes effect once per turn with weapons (1 attack per turn),<br>there's no limit for shields - you'll restore HP after each and every hit you take on that turn.</p>
+          <p>So as you can see, 弟 on a shield is easily one of the best seals in the game to help with consistency.<br>Prioritize synthesizing it onto your shield once you reach Shuten Trail Hard.</p>
+          <p>Lastly, if you obtain a Phantasm Bracelet in one of the post-game dungeons, it can be a good idea<br>to synthesize 弟 seals onto your weapon so that you can stay inside walls longer too.</p>
           <h2 id="how_to_handle_curses">How to Handle Curses</h2>
           <p>Text</p>
           <h3 id="curse_related_techniques">Curse Related Techniques</h3>
